--- a/index.html
+++ b/index.html
@@ -11,8 +11,32 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <script src="script.js"></script>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-WZBK5H8T");
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-WZBK5H8T"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header><span>REVELADO! 100% GRATUITO</span></header>
     <div class="container-1">
       <img src="/img/ApostaPRO.png" class="logo-image" />
@@ -38,62 +62,7 @@
         >Todos os dias são sorteados de R$500 a R$1000 para os membros do grupo!
       </span>
     </div>
-    <div class="container-2">
-      <span class="text-container-2"
-        >Veja os resultados dos
-        <span class="subtext-container-2"
-          ><br />
-          membros do Grupo VIP</span
-        ></span
-      >
-      <div class="swiper">
-        <!-- Swiper -->
-        <div class="swiper mySwiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img
-                class="swiper-slide-image swiper-lazy swiper-lazy-loaded"
-                alt="photo_2024-02-10_10-33-18-1.jpg"
-                src="/img/ProvaSocial01.png"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                class="swiper-slide-image swiper-lazy swiper-lazy-loaded"
-                alt="photo_2024-02-10_10-33-18-1.jpg"
-                src="/img/ProvaSocial02.png"
-              />
-            </div>
-            <div class="swiper-slide">
-              <img
-                class="swiper-slide-image swiper-lazy swiper-lazy-loaded"
-                alt="photo_2024-02-10_10-33-18-1.jpg"
-                src="/img/ProvaSocial03.png"
-              />
-            </div>
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
 
-        <!-- Swiper JS -->
-        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-        <!-- Initialize Swiper -->
-        <script>
-          var swiper = new Swiper(".mySwiper", {
-            pagination: {
-              el: ".swiper-pagination",
-              dynamicBullets: true,
-            },
-          });
-        </script>
-      </div>
-      <a
-        class="button-2"
-        href="https://chat.whatsapp.com/JIOHRQH4q715OwLGY9OpyK"
-        >ENTRAR NO GRUPO VIP</a
-      >
-    </div>
     <footer><span>ApostaPRO 2024 © Todos os Direitos Reservados</span></footer>
   </body>
 </html>
